# Navigation

./: .gitignore  README.md
adapters/legacy_scripts/: common.sh  env.example  fastdds_navigation.xml  record_mapping_sensors.sh  restart_navigation_localization.sh  start_mapping.sh  stop_navigation.sh
docs/: 01_总体架构.md  02_ROS2接口契约.md  03_建图流程.md  04_重定位与规划流程.md  05_BotDog适配方案.md  06_配置与地图格式.md  07_本地开发到Docker迁移.md  08_健康检查与验收清单.md  09_实施计划.md  10_低耦合边界.md  11_轻量测试前后端.md  12_动态避障方案.md  13_示例功能覆盖矩阵.md  14_待查阅问题汇总.md  15_常用命令.md  16_功能补齐自检.md  17_Go2_B2控制切换.md  18_SCAN-Planner集成.md  19_建图漂移与点云积压修复说明.md  README.md
docs/go2_control_chain/: README.md
src/bspline_opt/: CMakeLists.txt  package.xml
src/bspline_opt/include/bspline_opt/: bspline_optimizer.h  uniform_bspline.h
src/bspline_opt/src/: bspline_optimizer.cpp  uniform_bspline.cpp
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch/: msg_MID360_launch.py
src/livox_ros_driver2/src/: lddc.cpp  lds.cpp  lds_lidar.cpp  livox_ros_driver2.cpp
src/livox_ros_driver2/src/call_back/: livox_lidar_callback.cpp
src/livox_ros_driver2/src/comm/: lidar_imu_data_queue.cpp  lidar_imu_data_queue.h  pub_handler.cpp
src/nav_bringup/: CMakeLists.txt  package.xml
src/nav_bringup/config/: dynamic_avoidance.yaml  global_planner.yaml  global_planner_rviz_test.yaml  robot_nav.yaml  robot_size_pre_b2_20260710.yaml  rosbag_livox_qos.yaml  scan_planner.yaml  terrain_analysis.yaml
src/nav_bringup/launch/: localization.launch.py  mapping.launch.py  navigation.launch.py  pcd_debug_rviz.launch.py  planning.launch.py  rviz_planning_test.launch.py
src/nav_bringup/rviz/: mapping_debug.rviz  navigation_debug.rviz  pcd_debug.rviz  rviz_planning_test.rviz
src/nav_bringup/scripts/: nav_pcd_map_publisher.py  pcd_debug_publisher.py  rviz_2d_goal_planner.py  scan_initial_path_adapter.py  scan_tf_pose_publisher.py
src/nav_bringup/src/: livox_lidar_timestamp_monitor.cpp  nav_pcd_map_publisher.cpp
src/nav_bringup/test/: test_scan_tf_pose_publisher.py
src/nav_lio/: CMakeLists.txt  package.xml
src/nav_lio/config/: livox_360.yaml  relocation.yaml
src/nav_lio/include/common/: timer.h
src/nav_lio/include/lio/: ESKF.h  params.h  super_lio.h
src/nav_lio/include/ros/: ROSWrapper.h
src/nav_lio/launch/: Livox_mid360.py
src/nav_lio/rviz/: lio.rviz  relocation.rviz
src/nav_lio/src/apps/: relocation_node.cpp  super_lio_node.cpp
src/nav_lio/src/lio/: ESKF.cpp  params.cpp  super_lio.cpp  super_lio_reloc.cpp
src/nav_lio/src/ros/: ROSWrapper.cpp
src/nav_planner/: CMakeLists.txt  package.xml
src/nav_planner/config/: center_radius_trigger.yaml  path_planning_on_2d_static_layer.yaml  path_planning_on_lidar_static_layer.yaml  path_planning_on_no_entry_layer.yaml  path_planning_on_static_layer.yaml
src/nav_planner/data/: waypoints.json
src/nav_planner/include/global_planner/: a_star_on_pc.h  a_star_on_pre_graph.h  global_planner.h  hybrid_a_star.h
src/nav_planner/rviz/: path_planning_on_static_layer.rviz  pcd_goal_editor.rviz
src/nav_planner/script/: center_radius_trigger.py  clicked_dwa_planner_client.py  dynamic_avoidance_monitor.py  load_polygon_from_file.py  local_obstacle_simulator.py  nav_path_follower.py  pcd_goal_editor.py  waypoint_navigator.py  waypoint_navigator_from_json.py  waypoint_progress_monitor.py
src/nav_planner/src/: a_star_on_pc.cpp  a_star_on_pre_graph.cpp  global_planner.cpp  hybrid_a_star.cpp
src/nav_planner/test/: test_dynamic_avoidance_monitor.py  test_waypoint_navigator.py  test_waypoint_progress_monitor.py
src/nav_robot_control/: package.xml  setup.cfg  setup.py
src/nav_robot_control/config/: robot_control.yaml
src/nav_robot_control/launch/: robot_control.launch.py
src/nav_robot_control/nav_robot_control/: b2_cmd_vel_bridge.py  go2_webrtc_bridge.py
src/nav_runtime/: package.xml  setup.cfg  setup.py
src/nav_runtime/config/: runtime.yaml
src/nav_runtime/launch/: runtime.launch.py
src/nav_runtime/nav_runtime/: runtime_node.py
src/nav_terrain/: CMakeLists.txt  package.xml
src/nav_terrain/src/: nav_save_terrain_map.cpp  nav_terrain_analysis.cpp
src/path_searching/: CMakeLists.txt  package.xml
src/path_searching/include/path_searching/: dyn_a_star.h
src/path_searching/src/: dyn_a_star.cpp
src/perception_3d/: CMakeLists.txt
src/perception_3d/utils/: depthimg2pointcloud_node.cpp
src/plan_env/: CMakeLists.txt  package.xml
src/plan_env/include/plan_env/: grid_map.h
src/plan_env/src/: grid_map.cpp
src/scan_planner/: CMakeLists.txt  package.xml
src/scan_planner/include/plan_manage/: planner_manager.h  scan_replan_fsm.h
src/scan_planner/launch/: advanced_param.xml  default.rviz  run.launch  run.launch.py  rviz.launch  rviz.launch.py  simulator.xml
src/scan_planner/src/: closed_loop_controller.cpp  go2_gait_publisher.cpp  go2_kinematic_sim.cpp  open_loop_controller.cpp  planner_manager.cpp  scan_planner_node.cpp  scan_replan_fsm.cpp
src/traj_utils/: CMakeLists.txt  package.xml
src/traj_utils/include/traj_utils/: planning_visualization.h
src/traj_utils/src/: planning_visualization.cpp
tools/: go2_motion_probe.py
tools/test_app/: README.md  run_test_app.sh
tools/test_app/backend/: main.py  process_manager.py  ros_bridge.py
tools/test_app/frontend/: index.html
