<?xml version="1.0"?>
<package format="3">
  <name>bspline_opt</name>
  <version>0.0.0</version>
  <description>B-spline trajectory optimization utilities for SCAN-Planner.</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
