<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_bringup</name>
  <version>0.1.0</version>
  <description>低耦合导航系统统一启动与配置包</description>
  <maintainer email="maintainer@example.com">Navigation Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>livox_ros_driver2</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>nav_terrain</exec_depend>
  <exec_depend>nav_planner</exec_depend>
  <exec_depend>scan_planner</exec_depend>
  <exec_depend>nav_lio</exec_depend>
  <exec_depend>nav_robot_control</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
