<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_planner</name>
  <version>2.0.0</version>
  <description>Navigation 内置 dddmr global planner 迁移包</description>

  <maintainer email="maintainer@example.com">Navigation Maintainer</maintainer>

  <license>BSD</license>

  <author >Apola</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_python</depend>
  <depend>pluginlib</depend>
  <depend>libpcl-all</depend>
  <depend>pcl_conversions</depend>
  <build_depend>perception_3d</build_depend>
  <build_depend>dddmr_sys_core</build_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
