<?xml version="1.0"?>
<package format="3">
  <name>path_searching</name>
  <version>0.0.0</version>
  <description>A* path searching utilities for SCAN-Planner.</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>plan_env</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
