<?xml version="1.0"?>
<package format="3">
  <name>plan_env</name>
  <version>0.0.0</version>
  <description>Local occupancy mapping and collision query utilities for SCAN-Planner.</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
